more routes, new testing framework
